[tool.poetry]
name = "bank_server"
version = "0.1.0"
description = ""
authors = ["César Montoya <cesara.montoya1@udea.edu.co>"]
readme = "README.md"
packages = [{include = "bank_server"}]

[tool.poetry.dependencies]
python = "^3.12"
argon2-cffi = "^23.1.0"
rsa = "^4.9"
pillow = "^10.1.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
